Fix small DomUI layout problems.

--- a/to.etc.domui/src/resources/themes/blue/style.theme.css
+++ b/to.etc.domui/src/resources/themes/blue/style.theme.css
@@ -57,6 +57,11 @@ button {
 	vertical-align: bottom;
 }
 
+.page-content {
+	margin: 0px 10px;
+}
+
+
 /*** 005_oddchars.frag.css ***/
 /*** Select special chars ***/
 .ui-oddchars {
@@ -855,6 +860,7 @@ tr.ui-keyword-popup-row {
 	text-align: right;
 	font-weight: bold;
 	vertical-align: top;
+	min-width: 150px;
 }
 
 .ui-f-in {
