--- a/to.etc.domui/src/resources/themes/domui/002_core.frag.css
+++ b/to.etc.domui/src/resources/themes/domui/002_core.frag.css
@@ -47,3 +47,7 @@ button img {
 button {
 	vertical-align: bottom;
 }
+
+.page-content {
+	margin: 0px 10px;
+}
